# Industrial-Case-Study-MopoProject

./: .gitignore  README.md  pyproject.toml  python-requirements.txt
.spinetoolbox/: project.json
.spinetoolbox/items/commodity_db/: commodity_db.7e2e66ae0f8f
.spinetoolbox/specifications/Tool/: biomass_importer.json  cargo_importer.json  commodity_importer.json  gas_import.json  (+9 more)
data/: README.md  version_track.yml
data-pipelines/: .gitignore
data-pipelines/europe/: EU_historical_inflation_ECB.csv  userconfig.yaml
europe/: README.md  userconfig.yaml
europe/_biomass/: biomass_DB.py  biomass_template_DB.json
europe/_cargo-transport/: import_cargo.py
europe/_commodities/: commodities_template_DB.json
europe/_gas/: gas_import.py  gas_template_db.json
europe/_heat/: Heat_template_DB.json
europe/_hydro/: Hydro_template_DB.json  hydro_DB.py
europe/_ines-builder/: ines_structure.json  ines_target.py  sysconfig.yaml
europe/_power/: Power_Sector_template_DB.json  assumptions.xlsx  config.json  readme.md
europe/_residual-electricity-demand/: demand_DB.py
europe/_transmission/: transmission_DB.py  transmission_template_DB.json
europe/_transport/: Transport_template_DB.json  transport_DB.py
europe/_variable-renewables/: VRE_DB.py
ines-spineopt/: README.md  ines_to_spineopt_entities_to_parameters.yaml  ines_to_spineopt_parameters.yaml  settings.yaml
ines-spineopt/ines-spineopt/: ines_to_spineopt.py  ines_to_spineopt_entities.yaml  ines_to_spineopt_methods.yaml
ines-tools/: .gitignore  README.md
ines-tools/ines_tools/: ines_transform.py
(+29 files in other folders)
