[project]
name = "ines-tools"
dynamic = ["version"]

license = { file = "LICENSE" }
authors = [{name = "contributors"}]
keywords = ["workflow", "database", "energy system modelling"]
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "spinedb_api>=0.32.1",
    "pyyaml",
]

[project.urls]
Repository = "https://github.com/energy-modelling-workbench/ines-tools"

[project.scripts]
# spinetoolbox = "spinetoolbox.main:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
exclude = [
    "examples*",
    "docs*",
]

[tool.setuptools]
zip-safe = false
include-package-data = true